# fyta_cli

./: .coverage  README.md  client.py  exceptions.py  fyta_client.py  fyta_connector.py  fyta_exceptions.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  pylint.yml  python-publish.yml  ruff.yml  tests.yml  typing.yml
src/fyta_cli/: fyta_client.py  fyta_connector.py  fyta_exceptions.py  fyta_models.py  utils.py
tests/: __init__.py  conftest.py  ruff.toml  syrupy.py  test_fyta_cli.py
tests/__snapshots__/: test_fyta_cli.ambr
tests/fixtures/: get_measurements.json  get_plant_details_0.json  get_plant_details_1.json  get_plant_details_2.json  get_user_plants.json  login_response.json
